Assignment-6 Code Changes

--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -2,7 +2,7 @@
 version = 1.0.0 (sortbenchmark)
 
 [helper]
-instrument = false
+instrument = true
 seed =
 cutoff =
 
@@ -13,21 +13,22 @@ inversions = 0
 swaps = true
 compares = true
 copies = true
-fixes = true
+fixes = false
 hits = true
 
 [benchmarkstringsorters]
 words = 1000
 runs = 1000
-mergesort = false
+mergesort = true
 timsort = false
-quicksort = true
+quicksort = false
 introsort = false
 insertionsort = false
 bubblesort = false
 quicksort3way = false
 quicksortDualPivot = false
 randomsort = false
+heapsort = false
 
 [benchmarkdatesorters]
 timsort = false
